# soniox_demo

./: .env  LICENSE  README.md  main_direct.py  pyproject.toml
