[project]
name = "soniox-livetrans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "proc-tap>=0.1.0",
    "psutil>=5.9.0",
    "pyaudiowpatch>=0.2.12",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "soniox>=2.2.0",
]
